<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.testapk3.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btn_apk_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="34dp"
        android:text="@string/download_apk_1"
        android:onClick="downloadFile" />

    <Button
        android:id="@+id/btn_apk_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_apk_1"
        android:layout_below="@+id/btn_apk_1"
        android:layout_marginTop="36dp"
        android:onClick="downloadFile"
        android:text="@string/download_apk_2" />

    <Button
        android:id="@+id/btn_apk_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_apk_2"
        android:layout_below="@+id/btn_apk_2"
        android:layout_marginTop="52dp"
        android:onClick="downloadFile"
        android:text="@string/download_apk_3" />

</RelativeLayout>